# cake-shop-kata

./: README.md  requirements_1.md  requirements_2.md  requirements_3.md  requirements_4.md
Python/: pyproject.toml  setup.cfg
Python/src/: cakeshop.py  test_cakeshop.py
Typescript/src/: index.spec.ts  index.ts
