[metadata]
name = Cake Shop Kata
desciption = A TDD Kata for Domain Modelling
version = 1.0.0
license = CC0

[options]
python_requires = >=3
package_dir=
    =src
packages=find:
install_requires = 

[options.extras_require]
dev =
    pytest
    isort
    black
    pylint

[options.packages.find]
where=src
